--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -19,7 +19,6 @@ main {
     gap: 30px;
     padding: 30px 0;
     margin: 2rem;
-    /* background-color: blue; */
 }
 
 .ficha-personagem {
@@ -51,7 +50,7 @@ main {
 }
 
 .ficha-personagem .ficha-infos {
-    background: #fff;
+    background-color: #fff;
     display: flex;
     justify-content: space-between;
     padding: 80px 30px 50px;
@@ -62,7 +61,7 @@ main {
 }
 
 .ficha-personagem .ficha-infos h3 {
-    font-size: 20px;
+    font-size: 1.4rem;
     margin-bottom: 15px;
     border-bottom: 2px solid #858585;
 }
@@ -156,8 +155,6 @@ main {
 }
 
 .lista-personagens .item:nth-child(5) span {
-    /* margin-left: 24px; */
-    /* margin: 0 0 0 auto; */
     text-align: right;
 }
 
