--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -6,12 +6,14 @@ body {
 }
 
 main {
-    background-color: #E4E4E6;
+    background-color: #0060b8;
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 1280px;
+    background: url(../imagens/super-mario-bg.png) no-repeat center bottom #0060b8;
+    background-size: 1280px;
 }
 
 .mundo-super {
@@ -20,6 +22,7 @@ main {
     padding: 30px 0;
     margin: 2rem;
 }
+
 
 .ficha-personagem {
     display: none;
